# b4

./: .b4-config  .gitignore  .gitmodules  .vale.ini  CONTRIBUTING.rst  MANIFEST.in  README.rst  b4-send-email.sh  b4-wrapper.sh  b4.sh  ci-matrix.sh  ci.sh  distro-matrix.sh  ops  plan.otl  pyproject.toml  requirements-tui.txt  requirements.in  requirements.txt  setup.py  shazam-merge-template.example  thanks-am-template.example  thanks-pr-template.example  version
b4/: __init__.py  attest.py  command.py  diff.py  ez.py  kr.py  mbox.py  pr.py  rn.py  submit.py  ty.py
docs/: conf.py  config.rst  getting-support.rst  index.rst  installing.rst  releases.rst
docs/contributor/: overview.rst  prep.rst  send.rst  trailers.rst
docs/maintainer/: am-shazam.rst  bugs.rst  config.rst  diff.rst  dig.rst  keys.rst  kr.rst  mbox.rst  overview.rst  patches.rst  pr.rst  prs.rst  review.rst  thanks.rst  ty.rst
docs/reviewer/: getting-started.rst
hooks/: sendemail-validate-attestation-hook
man/: b4.5  b4.5.rst
misc/: agent-reviewer.md  default.conf  requirements-completion.in  retrieve_lore_thread.py  review-ci-example.py  send-receive.py  tc-generate.sh  test.sqlite
misc/distro/: _run.sh  alma10.sh  arch.sh  debian-stable.sh  fedora44.sh
misc/emacs/: b4-review-mode.el
src/b4/: __init__.py  _rewrite.py  command.py  diff.py  dig.py  ez.py  kr.py  mbox.py  pr.py  ty.py
src/tests/: conftest.py  test___init__.py  test_cwd_safety.py  test_display_width.py  test_editor_plugins.py  test_ez.py  test_lore_request.py  test_mbox.py  test_messages.py  test_packaging.py  test_patatt.py  test_pr.py  test_pw_fetch.py  test_rethread.py  test_review.py  test_review_checks.py  test_review_show_info.py  test_review_tracking.py  test_rewrite.py  test_three_way_merge.py  test_tui_bugs.py  test_tui_modals.py  test_tui_pw.py  test_tui_review.py  test_tui_tracking.py  test_ty.py
tests/: conftest.py  linux_rn.sh  test___init__.py  test_ez.py  test_mbox.py  xfs-5.10..5.17.in
tests/samples/: gitdir.bundle  gpg-badsig.txt  gpg-good-valid-notrust.txt  shazam-git1-just-series-defaults.verify  shazam-git1-just-series-merged.verify  shazam-git1-just-series.mbox  trailers-followup-bare-address-ref-defaults.txt  trailers-followup-bare-address.mbox  trailers-followup-custody-ref-ordered.txt  trailers-followup-custody-ref-unordered.txt  trailers-followup-custody-ref-with-ignored.txt  trailers-followup-custody.mbox  trailers-followup-name-parens-ref-defaults.txt  trailers-followup-non-git-patch-ref-defaults.txt  trailers-followup-non-git-patch.mbox  trailers-followup-nore-ref-defaults.txt  trailers-followup-nore.mbox  trailers-followup-partial-reroll-ref-defaults.txt  trailers-followup-partial-reroll.mbox  trailers-followup-single-ref-addlink.txt  trailers-followup-single-ref-addmsgid.txt  trailers-followup-single-ref-addmysob.txt  trailers-followup-single-ref-copyccs.txt  trailers-followup-single-ref-defaults.txt  trailers-followup-single-ref-noadd.txt  trailers-followup-single-ref-ordered.txt  trailers-followup-single-ref-sloppy.txt  trailers-followup-single.mbox  trailers-followup-with-cover.mbox  (+8 more)
(+70 files in other folders)
